[package]
name = "tapedeck"
version = "0.1.0"
authors = ["wolfspider <jesse.alexander.bennnett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bsq = { path = "../bsq" }
cpp = "0.5.5"

[build-dependencies]

cpp_build = "0.5.5"